DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2008-02-23 patrick  Removed vpr::LibraryDYLD, which means that Mac OS X 10.3 is
                    no longer supported.
                    NEW VERSION: 2.1.13
2008-02-13 patrick  Changed vpr::TSObjectProxy<T> smart pointer interface to
                    throw an exception (of the new type vpr::BadCastException)
                    if the downcast part of the thread-specific data access
                    fails.
                    NEW VERSION: 2.1.12
2008-01-16 patrick  Added vpr::AveragingAllocationStrategy for use with
                    vpr::NoPushWriter.
                    NEW VERSION: 2.1.11
2008-01-13 patrick  Folded vpr::SocketBasicOpt and vpr::SocketIpOpt into
                    vpr::Socket_t<T>. Folded vpr::SocketStreamOpt into
                    vpr::SocketStream_t<T>. Folded vpr::SocketDatagramOpt into
                    vpr::SocketDatagram_t<T>. Removed vpr::SocketOptionWrapper.
                    NEW VERSION: 2.1.10
2008-01-12 patrick  Extended vpr::SocketStream to support "corked" or no-push
                    writing.
                    NEW VERSION: 2.1.9
2007-10-30 patrick  Improved const correctness in the statistics collection
                    classes vpr::BandwidthIOStatsStrategy and
                    vpr::SampleLimitedStatCollector<T,bool>.
                    NEW VERSION: 2.1.8
2007-09-16 patrick  Removed polymorphism from vpr::BaseThread and vpr::Thread.
                    NEW VERSION: 2.1.7
2007-09-16 patrick  Added vpr::ThreadWin32::setRunOn() and
                    vpr::ThreadWin32::getRunOn(). Added Linux-specific
                    implementations of vpr::ThreadPosix::setRunOn() and
                    vpr::ThreadPosix::getRunOn(). Changed
                    vpr::Thread::getRunOn() so that it now returns
                    std::vector<unsigned int>.
                    NEW VERSION: 2.1.6