@@ -672,7 +672,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\modules\vapor\vpr\md\NSPR\DynLoad\LibraryNSPR.cpp"
+				RelativePath="..\..\modules\vapor\vpr\md\WIN32\DynLoad\LibraryWin32.cpp"
 				>
 			</File>
 			<File
@@ -857,10 +857,6 @@
 			Filter="h;hpp;hxx;hm;inl;inc"
 			>
 			<File
-				RelativePath="..\..\modules\vapor\vpr\IO\Socket\AveragingAllocationStrategy.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\modules\vapor\vpr\Util\Assert.h"
 				>
 			</File>
@@ -870,6 +866,10 @@
 			</File>
 			<File
 				RelativePath="..\..\modules\vapor\vpr\AutoLink.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\modules\vapor\vpr\IO\Socket\AveragingAllocationStrategy.h"
 				>
 			</File>
 			<File
@@ -1045,7 +1045,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\modules\vapor\vpr\md\NSPR\DynLoad\LibraryNSPR.h"
+				RelativePath="..\..\modules\vapor\vpr\md\WIN32\DynLoad\LibraryWin32.h"
 				>
 			</File>
 			<File
@@ -1061,6 +1061,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\modules\vapor\vpr\IO\Socket\MaximumAllocationStrategy.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\modules\vapor\vpr\IO\Socket\McastReq.h"
 				>
 			</File>
@@ -1070,10 +1074,6 @@
 			</File>
 			<File
 				RelativePath="..\..\modules\vapor\vpr\Sync\Mutex.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\modules\vapor\vpr\IO\Socket\MaximumAllocationStrategy.h"
 				>
 			</File>
 			<File
